요구사항 5 - 인자를 가진 생성자의 인스턴스 생성